Fixed Avatar and added TextShadows

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <main>
 
       <header>
-        <h1>Bello</h1>
-        <p>Some nice Text</p>
+        <h1>Hello World</h1>
+        <!-- <p>Let me entertain you</p> -->
       </header>
       
-      <blockquote>
+      <!-- <blockquote>
         <p>Im building my portfolio with THREE.js</p>
-      </blockquote>
+      </blockquote> -->
 
       <section>
         <h2>Lorem Ipsum</h2>
@@ -39,7 +39,11 @@
 
       </section>
 
-      <section class="light">
+      <blockquote class="left">
+        <p>🎓Lorem ipsum dolor sit amet <br>consectetur</p>
+      </blockquote>
+
+      <section class="left">
         <h2>🎨 Projects</h2>
 
         <p>
@@ -55,10 +59,10 @@
       </section>
 
       <blockquote>
-        <p>Lorem ipsum dolor sit amet <br>consectetur</p>
+        <p>💼 Lorem ipsum dolor</p>
       </blockquote>
 
-      <section class="left">
+      <section class="light">
         <h2>🎥 Work History</h2>
 
         <h3>McDonalds</h3>
@@ -76,9 +80,9 @@
 
       </section>
 
-      <blockquote>
+      <!-- <blockquote>
         <p>Thanks for watching!</p>
-      </blockquote>
+      </blockquote> -->
     </main>
     <script type="module" src="/main.js"></script>
 
