added example media

--- a/index.html
+++ b/index.html
@@ -80,9 +80,33 @@
 
       </section>
 
-      <!-- <blockquote>
-        <p>Thanks for watching!</p>
-      </blockquote> -->
+      <blockquote class="left">
+        <p>💼 Lorem ipsum dolor</p>
+      </blockquote>
+
+      <section class="left">
+        <img 
+        src="https://images.unsplash.com/photo-1634455792598-4ffa0d97f460?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80"
+        height="auto"
+        width="100%" 
+        alt="Image_1">
+      </section>
+
+      <blockquote>
+        <p>💼 Lorem ipsum dolor</p>
+      </blockquote>
+
+      <section class="light">
+        <img 
+        src="https://images.unsplash.com/photo-1634334339429-660e1b088026?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80"
+        height="auto"
+        width="100%" 
+        alt="Image_2">
+      </section>
+
+      
+
+
     </main>
     <script type="module" src="/main.js"></script>
 
