--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     
     <canvas class="webgl"></canvas>
+    <div class="content">
+      <h1>The City of Bello</h1>
+    </div>
     <!-- <main>
       <header>
         <h1>Hello World</h1>
